<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/unnamed" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewComplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:gravity="start|center"
            android:text="@string/newComplaint"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/abc_vector_test"
            app:iconSize="80dp"
            app:strokeColor="@color/colorBlack" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnComplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:gravity="start|center"
            android:text="@string/complaint"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/abc_vector_test"
            app:iconSize="80dp"

            app:layout_constraintTop_toBottomOf="@id/btnNewComplaint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:gravity="center|start"
            android:text="@string/profile"
            android:textAlignment="viewStart"
            android:textSize="26sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/abc_vector_test"
            app:iconSize="80dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:gravity="center|start"
            android:text="Çıkış"
            android:textAlignment="viewStart"
            android:textSize="26sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/abc_vector_test"
            app:iconSize="80dp" />


    </LinearLayout>

</LinearLayout>