<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/svsbldlogo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtTxtLytTcNo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:boxStrokeColor="@color/primaryDarkColor"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:hintTextColor="@color/colorRed"
                    app:startIconDrawable="@drawable/iconfinder_id"
                    tools:ignore="PrivateResource">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTcNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edtTxtTcNo"
                        android:inputType="number"
                        android:textColor="@color/colorThemeNormal"
                        android:textColorHint="@color/colorRed" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:boxStrokeColor="@color/primaryDarkColor"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/colorRed"
                    app:startIconDrawable="@drawable/icon_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edtTxtPassword"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorRed" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/btnLogin"
                    android:textSize="25sp"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/btnRegister"
                    android:textSize="25sp"
                    app:cornerRadius="10dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>